@@ -1,3 +1,12 @@
+2009-01-08  Adam Nemet  <anemet@caviumnetworks.com>
+
+	* config/tc-mips.c (NO_ISA_COP): New macro.
+	(COP_INSN): New macro.
+	(is_opcode_valid): Use them.
+	(macro) <ld_st>: Use them.  Don't accept coprocessor load store
+	insns based on the ISA if CPU is NO_ISA_COP.
+	<copz>: Likewise for coprocessor operations.
+
 2008-10-09  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* dw2gencfi.c (cfi_finish): Deal with md_fix_up_eh_frame.
